<resources>
    <string name="app_name">WhatsApp</string>
    <string name="new_group">New group</string>
    <string name="First_chat">Dark Knight Army</string>
    <string name="Second_chat">Android Developers</string>
    <string name="Third_chat">Java Group</string>
    <string name="Four_chat">Friends</string>
    <string name="Fifth_chat">Nakli Dost</string>
    <string name="Sixth_chat">Garib Dost</string>
    <string name="title_activity_ad">AdActivity</string>
    <string name="action_settings">Settings</string>


    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
</resources>