<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tooBarMainpage"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#00A884"
        app:menu="@menu/home_menu"
        app:title="WhatsApp"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#00A884"
        android:weightSum="3">

        <TextView
            android:id="@+id/chatstxt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:drawableStart="@drawable/camera_icon"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingRight="10dp"
            android:text="CHATS"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/statustxt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingStart="20dp"
            android:text="STATUS"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/callstxt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingStart="20dp"
            android:text="CALLS"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_500sdp"
                android:background="@color/white"
                android:backgroundTint="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="80dp"
                    android:background="@color/white">


                    <TextView
                        android:id="@+id/firstChat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_weight="1"
                        android:text="@string/First_chat"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:paddingRight="15dp"
                        android:text="Yesterday" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="6dp"
                        android:src="@drawable/android_developers" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="30dp"
                        android:src="@drawable/boss_avatar" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="30dp"
                        android:src="@drawable/android_developers" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="30dp"
                        android:src="@drawable/friends" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:src="@drawable/nakli_dost" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="@dimen/_25sdp"
                        android:src="@drawable/poor_man" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:src="@drawable/poor_man" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="35dp"
                    android:drawableRight="@drawable/ic_baseline_fiber_manual_record_24"
                    android:paddingRight="@dimen/_10sdp"
                    android:text="Hii" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="80dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_weight="1"
                        android:text="@string/Second_chat"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:paddingRight="15dp"
                        android:text="18/6/22" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="115dp"
                    android:drawableRight="@drawable/ic_baseline_fiber_manual_record_24"
                    android:paddingRight="@dimen/_10sdp"
                    android:text="Good Morning" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="160dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_weight="1"
                        android:text="@string/Third_chat"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:paddingRight="15dp"
                        android:text="21/5/22" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="195dp"
                    android:drawableRight="@drawable/ic_baseline_fiber_manual_record_24"
                    android:paddingRight="@dimen/_10sdp"
                    android:text="Hello" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="240dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_weight="1"
                        android:text="@string/Four_chat"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:paddingRight="15dp"
                        android:text="21/5/22" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="275dp"
                    android:drawableRight="@drawable/ic_baseline_fiber_manual_record_24"
                    android:paddingRight="@dimen/_10sdp"
                    android:text="☺" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="@dimen/_240sdp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:layout_weight="1"
                        android:text="@string/Fifth_chat"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:paddingRight="15dp"
                        android:text="21/5/22" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="73dp"
                    android:layout_marginTop="@dimen/_270sdp"
                    android:drawableLeft="@drawable/ic_baseline_photo_camera_24"
                    android:drawableRight="@drawable/ic_baseline_fiber_manual_record_24"
                    android:paddingLeft="@dimen/_4sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:text="  sent photo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="@dimen/_305sdp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:layout_weight="1"
                        android:text="@string/Sixth_chat"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:paddingRight="15dp"
                        android:text="21/5/22" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="75dp"
                    android:layout_marginTop="@dimen/_332sdp"
                    android:drawableRight="@drawable/ic_baseline_fiber_manual_record_24"
                    android:paddingLeft="@dimen/_4sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:text="paisa Uchina aapne bhai" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="@dimen/_360sdp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_weight="1"
                        android:text="@string/Second_chat"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:paddingRight="15dp"
                        android:text="18/6/22" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="@dimen/_385sdp"
                    android:drawableRight="@drawable/ic_baseline_fiber_manual_record_24"
                    android:paddingRight="@dimen/_10sdp"
                    android:text="Good Morning" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
